--- a/frontend/assets/stylesheets/pages/_about.scss
+++ b/frontend/assets/stylesheets/pages/_about.scss
@@ -5,9 +5,7 @@
 
 h2.about-block-title {
     @include fs-headline(4);
-    @include rem((
-       padding: $gs-baseline $gs-gutter 0 $gs-gutter
-    ));
+    padding: rem($gs-baseline) rem($gs-gutter) 0;
     @include mq(tablet) {
         @include fs-headline(6);
     }
@@ -21,15 +19,11 @@ h2.about-block-title {
 
     .benefits-title {
         @include fs-bodyHeading(1);
-        border-top: 1px solid $c-neutral5;
-        @include rem((
-            padding: $gs-gutter/2 0
-        ));
+        border-top: rem(1px) solid $c-neutral5;
+        padding: rem($gs-gutter / 2) 0;
 
         &:last-child {
-            @include rem((
-                padding-bottom: $gs-gutter/2
-            ));
+            padding-bottom: rem($gs-gutter / 2);
         }
     }
 
@@ -39,9 +33,7 @@ h2.about-block-title {
 
     .package__description {
         @include mq(desktop) {
-            @include rem((
-                min-height: 120px
-            ));
+            min-height: rem(120px);
         }
     }
 
@@ -63,54 +55,40 @@ h2.about-block-title {
         width: 100%;
 
         @include mq(desktop) {
-            @include rem((
-                width: gs-span(12)+$gs-gutter*2,
-                margin: 0 auto
-            ));
+            width: rem(gs-span(12) + $gs-gutter * 2);
+            margin: 0 auto;
         }
 
         @include mq(mem-full) {
-            @include rem((
-                width: gs-span(14)+$gs-gutter*2
-            ));
+            width: rem(gs-span(14) + $gs-gutter * 2);
         }
     }
 
     .benefits__list {
-        @include rem((
-            margin: $gs-gutter
-        ));
+        margin: rem($gs-gutter);
 
         @include mq(tablet) {
-            @include rem((
-                width: gs-span(9),
-                margin: 80px $gs-gutter 0 gs-span(1),
-                padding-bottom: $gs-gutter+10
-            ));
+            width: rem(gs-span(9));
+            margin: rem(80px) rem($gs-gutter) 0 rem(gs-span(1));
+            padding-bottom: rem($gs-gutter + 10);
         }
 
         @include mq(desktop) {
-            @include rem((
-                width: gs-span(11),
-                margin: 80px $gs-gutter 0
-            ));
+            width: rem(gs-span(11));
+            margin: rem(80px) rem($gs-gutter) 0;
         }
 
         @include mq(mem-full) {
-            @include rem((
-                width: gs-span(12),
-                margin: 80px $gs-gutter 0 gs-span(2)+$gs-gutter*2
-            ));
+            width: rem(gs-span(12));
+            margin: rem(80px) rem($gs-gutter) 0 rem(gs-span(2) + $gs-gutter * 2);
         }
     }
 
     .benefits__list--items {
         float: left;
         @include fs-bodyCopy(2);
-        @include rem((
-            width: gs-span(4),
-            height: 130px
-        ));
+        width: rem(gs-span(4));
+        height: rem(130px);
 
         &:nth-child(4),
         &:nth-child(8) {
@@ -119,40 +97,30 @@ h2.about-block-title {
 
         @include mq(tablet) {
             @include fs-bodyCopy(3);
-            @include rem((
-                width: gs-span(3),
-                padding: 0 $gs-gutter/2,
-                height: 220px
-            ));
+            width: rem(gs-span(3));
+            padding: 0 rem($gs-gutter / 2);
+            height: rem(220px);
         }
 
         @include mq(desktop) {
-            border-right: 1px solid $c-neutral3;
-            @include rem((
-                width: gs-span(3)-10,
-                height: 220px,
-                margin-bottom: 50px
-            ));
+            border-right: rem(1px) solid $c-neutral3;
+            width: rem(gs-span(3) - 10);
+            height: rem(220px);
+            margin-bottom: rem(50px);
         }
 
         @include mq(mem-full) {
-            @include rem((
-                width: gs-span(3),
-                height: 190px
-            ));
+            width: rem(gs-span(3));
+            height: rem(190px);
         }
 
         .icon-sprite__left {
             float: left;
-            @include rem((
-                margin: 0 $gs-gutter $gs-gutter*2 0
-            ));
+            margin: 0 rem($gs-gutter) rem($gs-gutter * 2) 0;
 
             @include mq(tablet) {
                 float: none;
-                @include rem((
-                    margin: 0 $gs-gutter 0 0
-                ));
+                margin: 0 rem($gs-gutter) 0 0;
             }
         }
     }
