--- a/frontend/assets/stylesheets/utility/_js-warning.scss
+++ b/frontend/assets/stylesheets/utility/_js-warning.scss
@@ -1,6 +1,6 @@
 .js-warning {
     background-color: #e9e939;
-    padding: 5px;
+    padding: rem(5px);
     font-size: 1.4rem;
     text-align: center;
     opacity: .8;
