--- a/frontend/assets/stylesheets/_mixins.scss
+++ b/frontend/assets/stylesheets/_mixins.scss
@@ -48,11 +48,9 @@
         display: inline-block;
         content: '';
         @include border-radius(6px);
-        @include rem((
-            height: 12px,
-            width: 12px,
-            margin-right: $right-space
-        ));
+        height: rem(12px);
+        width: rem(12px);
+        margin-right: rem($right-space);
         background-color: $color;
     }
 }
@@ -81,9 +79,7 @@
     // Fallback for non-Webkit browsers
     // (won't show `…` at the end of the block)
     @if $line-height {
-        @include rem((
-            max-height: $line-height * $lines
-        ));
+        max-height: rem($line-height * $lines);
     }
 }
 
@@ -97,7 +93,7 @@
 
     .i {
         position: absolute;
-        text-indent: -9999px;
+        text-indent: rem(-9999px);
         top: 50%;
         left: 50%;
         margin-top: $iconOffsetX;
