--- a/frontend/assets/stylesheets/base/_helpers.scss
+++ b/frontend/assets/stylesheets/base/_helpers.scss
@@ -119,7 +119,7 @@
 
 .u-underline {
     text-decoration: none !important;
-    border-bottom: 1px solid $c-neutral4;
+    border-bottom: rem(1px) solid $c-neutral4;
     @include transition(border-color .15s ease-out);
 
     &:hover,
