--- a/frontend/assets/stylesheets/base/_tables.scss
+++ b/frontend/assets/stylesheets/base/_tables.scss
@@ -58,16 +58,14 @@ td {
 
 .table {
     background: $c-neutral8;
-    border-top: 2px solid $c-newsAccent;
+    border-top: rem(2px) solid $c-newsAccent;
     color: $c-neutral1;
 
     th,
     td,
     .table__caption {
         @include fs-data(3);
-        @include rem((
-            padding: $table-baseline $table-gutter
-        ));
+        padding: rem($table-baseline) rem($table-gutter);
         vertical-align: top;
     }
 
@@ -78,11 +76,11 @@ td {
     }
 
     td {
-        border-top: 1px solid darken($c-neutral8, 4%);
+        border-top: rem(1px) solid darken($c-neutral8, 4%);
     }
 
     abbr {
-        border-bottom: 1px dotted $c-neutral8;
+        border-bottom: rem(1px) dotted $c-neutral8;
     }
 
     // Show / hide functionality
@@ -103,9 +101,7 @@ td {
         td,
         thead td {
             @include fs-data(5, true);
-            @include rem((
-                padding: $table-baseline*1.5 $table-gutter*1.5
-            ));
+            padding: rem($table-baseline * 1.5) rem($table-gutter * 1.5);
         }
     }
 }
@@ -133,29 +129,25 @@ td {
 }
 
 .table-row--divider td {
-    border-top: 1px dashed $c-neutral1;
+    border-top: rem(1px) dashed $c-neutral1;
 }
 
 .table__headline {
     @include fs-bodyHeading(2);
-    border-top: 1px dotted $c-neutral5;
-    @include rem((
-        padding: $gs-baseline/2 0 $gs-baseline
-    ));
+    border-top: rem(1px) dotted $c-neutral5;
+    padding: rem($gs-baseline / 2) 0 rem($gs-baseline);
 }
 
 // We replicate the table style
 // then move the caption over the top border
 // This is because the caption is outside the flow of the table
 .table__caption {
-    @include rem((
-        padding: $table-baseline*2
-    ));
+    padding: rem($table-baseline * 2);
     background: $c-neutral8;
-    border-bottom: 1px solid darken($c-neutral8, 4%);
-    border-top: 2px solid $c-newsAccent;
+    border-bottom: rem(1px) solid darken($c-neutral8, 4%);
+    border-top: rem(2px) solid $c-newsAccent;
     font-weight: bold;
-    margin-bottom: -2px;
+    margin-bottom: rem(-2px);
     position: relative;
     text-align: left;
     z-index: 2;
@@ -164,7 +156,7 @@ td {
 .table__caption--bottom {
     font-weight: normal;
     border-bottom: 0 none;
-    border-top: 1px solid darken($c-neutral8, 4%);
+    border-top: rem(1px) solid darken($c-neutral8, 4%);
     caption-side: bottom;
     text-align: center;
 }
