--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -40,12 +40,12 @@ blockquote {
 
 p {
     margin-top: 0;
-    margin-bottom: ($gs-baseline/3)*2;
+    margin-bottom: rem(($gs-baseline / 3) * 2);
 }
 
 h3 {
     font-weight: normal;
-    margin-bottom: 7px;
+    margin-bottom: rem(7px);
     @include fs-bodyCopy(3);
 }
 
@@ -55,9 +55,7 @@ h3 {
 blockquote {
     font-style: italic;
     font-weight: 300;
-    @include rem((
-        margin-bottom: 10px
-    ));
+    margin-bottom: rem(10px);
 
     &:before {
         @extend %icon-sprite;
@@ -65,15 +63,11 @@ blockquote {
         content: '';
         display: block;
         float: left;
-        @include rem((
-            margin-right: 5px
-        ));
+        margin-right: rem(5px);
     }
 }
 
 .blockquote--black-line {
-    border-top: 1px solid $black;
-    @include rem((
-        padding-top: 10px
-    ));
+    border-top: rem(1px) solid $black;
+    padding-top: rem(10px);
 }
