--- a/frontend/assets/stylesheets/components/_icons.scss
+++ b/frontend/assets/stylesheets/components/_icons.scss
@@ -1,11 +1,9 @@
 .i {
     background-repeat: no-repeat;
     display: inline-block;
-    @include rem((
-        text-indent: -9999px,
-        width: 18px,
-        height: 18px
-    ));
+    text-indent: rem(-9999px);
+    width: rem(18px);
+    height: rem(18px);
 }
 
 .i-menu {
@@ -39,26 +37,20 @@
 
 .i-logo {
     display: block;
-    @include rem((
-        width: 217px,
-        height: 20px
-    ));
+    width: rem(217px);
+    height: rem(20px);
     background: url('/assets/images/header/logo_mobile.png') no-repeat center top;
 
     @include mq(mobileLandscape) {
         background: url('/assets/images/header/logo_tablet.png') no-repeat center top;
-        @include rem((
-            width: 375px,
-            height: 34px
-        ));
+        width: rem(375px);
+        height: rem(34px);
     }
 
     @include mq(tablet) {
         background: url('/assets/images/header/logo.png') no-repeat center top;
-        @include rem((
-            width: 520px,
-            height: 48px,
-        ));
+        width: rem(520px);
+        height: rem(48px);
     }
 }
 
@@ -73,10 +65,8 @@
 
 // Putting in the class twice renders as the class important is SASS
 .icon-sprite--small.icon-sprite--small {
-    @include rem((
-        background-size: $gs-gutter+5 $gs-gutter+5,
-        width: $gs-gutter+5,
-        height: $gs-gutter+5,
-        margin: 0 $gs-gutter -7px 0
-    ));
+    background-size: rem($gs-gutter + 5) rem($gs-gutter + 5);
+    width: rem($gs-gutter + 5);
+    height: rem($gs-gutter + 5);
+    margin: 0 rem($gs-gutter) rem(-7px) 0;
 }
