--- a/frontend/assets/stylesheets/nav/_pop-up.scss
+++ b/frontend/assets/stylesheets/nav/_pop-up.scss
@@ -6,35 +6,26 @@
     position: absolute;
     top: 0;
     clear: both;
-    @include rem((
-        padding: ($gs-baseline/3)*2 0
-    ));
+    padding: rem(($gs-baseline / 3) * 2) 0;
     list-style: none;
-    @include rem((
-        margin-bottom: -4px
-    ));
+    margin-bottom: rem(-4px);
     background-color: darken($mem-blue, 10%);
     width: 100%;
 
     .nav-popup__cta_container {
         // duplicated in nav--columns to align with menu
-        @include rem((
-            padding: 0 $gs-gutter/2
-        ));
+        padding: 0 rem($gs-gutter / 2);
         @include mq(mobileLandscape) {
-            @include rem((
-                padding-left: $gs-gutter,
-                padding-right: $gs-gutter
-            ));
+
+            padding-left: rem($gs-gutter);
+            padding-right: rem($gs-gutter);
         }
     }
 
     .nav-popup__cta {
         background-color: #005689;
-        @include rem((
-            padding: $gs-baseline $gs-baseline * 2,
-            margin: $gs-gutter 0
-        ));
+        padding: rem($gs-baseline) rem($gs-baseline * 2);
+        margin: rem($gs-gutter) 0;
         color: #ffffff;
         display: inline-block;
         width: 90%;
@@ -49,9 +40,7 @@
     }
     @include mq(mobileLandscape) {
         .nav-popup__cta {
-            @include rem((
-                margin-left: $gs-gutter
-            ));
+            margin-left: rem($gs-gutter);
         }
     }
 }
@@ -60,37 +49,30 @@
    ========================================================================== */
 
 .nav-popup--small {
-    @include rem((
-        padding-top: 36px,
-        padding-bottom: $gs-baseline,
-        top: $mobilePopupOffset,
-        min-height: 47px
-    ));
+    padding-top: rem(36px);
+    padding-bottom: rem($gs-baseline);
+    top: rem($mobilePopupOffset);
+    min-height: rem(47px);
 
     @include mq(tablet) {
         position: absolute;
-
-        @include rem((
-            top: 40px,
-            left: 30px,
-            padding-top: $gs-baseline/3,
-            width: gs-span(4) + $gs-gutter * 2
-        ));
+        top: rem(40px);
+        left: rem(30px);
+        padding-top: rem($gs-baseline / 3);
+        width: rem(gs-span(4) + $gs-gutter * 2);
         @include box-sizing(border-box);
         background-color: $white;
-        border: 1px solid $c-neutral4;
+        border: rem(1px) solid $c-neutral4;
 
         .nav--additional-sections > .nav__item {
             > .nav__link {
                 border-top: 0;
-                border-bottom: 1px solid lighten($c-neutral4, 8%);
+                border-bottom: rem(1px) solid lighten($c-neutral4, 8%);
             }
         }
 
         .nav__link {
-            @include rem((
-                padding: 10px 0
-            ));
+            padding: rem(10px) 0;
         }
     }
 }
@@ -111,18 +93,13 @@
     padding-bottom: 0;
     z-index: 4;
     background-color: $white;
-    
-    @include rem((
-        width: 175px,
-        margin-left: $gs-gutter/2
-    ));
+    width: rem(175px);
+    margin-left: rem($gs-gutter / 2);
 
     @include mq(tablet) {
-        left: 30px;
-        @include rem((
-            top: 44px,
-            width: gs-span(3)
-        ));
+        left: rem(30px);
+        top: rem(44px);
+        width: rem(gs-span(3));
     }
 
     &:after {
@@ -135,17 +112,13 @@
         position: absolute;
         pointer-events: none;
         border-bottom-color: $white;
-        @include rem((
-            border-width: 6px,
-            margin-left: -6px
-        ));
+        border-width: rem(6px);
+        margin-left: rem(-6px);
 
         @include mq(desktop) {
             left: 18%;
-            @include rem((
-                border-width: $gs-gutter/2,
-                margin-left: -$gs-gutter/2
-            ));
+            border-width: rem($gs-gutter / 2);
+            margin-left: rem(-$gs-gutter / 2);
         }
     }
 
@@ -170,16 +143,12 @@
 
             .nav__link {
                 border-top: 0;
-                border-bottom: 1px solid $c-neutral7;
+                border-bottom: rem(1px) solid $c-neutral7;
                 padding-left: 0;
-                @include rem((
-                    margin: 0 $gs-gutter/2
-                ));
+                margin: 0 rem($gs-gutter / 2);
 
                 @include mq(tablet) {
-                    @include rem((
-                        padding: 10px 0
-                    ));
+                    padding: rem(10px) 0;
                 }
             }
         }
