--- a/frontend/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/assets/stylesheets/pages/_tickets.scss
@@ -2,18 +2,14 @@
 
     .tickets-select-form__section {
         background-color: $c-neutral7;
-        @include rem((
-            margin-bottom: $gs-baseline
-        ));
+        margin-bottom: rem($gs-baseline);
     }
 
     .tickets-select-form__label {
         position: relative;
         display: inline-block;
         float: left;
-        @include rem((
-            padding: 36px $gs-gutter*1.5
-        ));
+        padding: rem(36px) rem($gs-gutter * 1.5);
     }
 
     .tickets-select-form__input {
@@ -21,27 +17,21 @@
     }
 
     .tickets-select-form__header {
-        border-bottom: 1px solid $c-neutral4;
+        border-bottom: rem(1px) solid $c-neutral4;
     }
 
     .tickets-select-form-header__secondary {
         position: relative;
-        @include rem((
-            padding: $gs-baseline $gs-baseline $gs-baseline 0,
-            margin-left: 73px
-        ));
+        padding: rem($gs-baseline) rem($gs-baseline) rem($gs-baseline) 0;
+        margin-left: rem(73px);
     }
 
     .tickets-select-form__detail {
         background-color: $c-neutral9;
-        @include rem((
-            padding: $gs-baseline
-        ));
+        padding: rem($gs-baseline);
 
         @include mq(tablet) {
-            @include rem((
-                padding: $gs-baseline $gs-baseline $gs-baseline $gs-row-height*2
-            ));
+            padding: rem($gs-baseline) rem($gs-baseline) rem($gs-baseline) rem($gs-row-height * 2);
         }
     }
 
@@ -50,15 +40,11 @@
     }
 
     .tickets-select-form__tier-name {
-        @include rem((
-            padding-bottom: $gs-baseline
-        ));
+        padding-bottom: rem($gs-baseline);
 
         @include mq(tablet) {
             float: left;
-            @include rem((
-                line-height: 64px
-            ));
+            line-height: rem(64px);
         }
     }
 
@@ -66,18 +52,14 @@
         position: absolute;
         top: 0;
         right: 0;
-        @include rem((
-            width: 100%,
-            height: 100%
-        ));
+        width: 100%;
+        height: 100%;
     }
 
     .tickets-select-form__toggle-icon {
         position: absolute;
-        @include rem((
-            right: 20px,
-            top: 40px
-        ));
+        right: rem(20px);
+        top: rem(40px);
     }
 
     .tickets-select-form__toggle-icon--open {
@@ -95,9 +77,7 @@
     input[type=submit] {
         @extend .icon-sprite-arrow-right-white;
         height: auto;
-        @include rem((
-            background-position: 94% 9px!important
-        ));
+        background-position: 94% rem(9px) !important;
     }
 
 }
@@ -105,16 +85,13 @@
 .tickets__payment {
     .payment__flyer {
         float: left;
-        @include rem((
-            width: 63%,
-            padding: $gs-baseline 0,
-            border-bottom: 1px solid $c-neutral1,
-            margin-bottom: $gs-baseline
-        ));
+        width: 63%;
+        padding: rem($gs-baseline) 0;
+        border-bottom: rem(1px) solid $c-neutral1;
+        margin-bottom: rem($gs-baseline);
+
         .payment__flyer-image {
-            @include rem((
-                padding-right: $gs-gutter
-            ));
+            padding-right: rem($gs-gutter);
             float: left;
         }
     }
@@ -148,9 +125,7 @@
     text-align: center;
     cursor: default;
     position: relative;
-    @include rem((
-        margin-top: $gs-baseline*4
-    ));
+    margin-top: rem($gs-baseline * 4);
 
     .funnel__rail {
         margin: 0;
@@ -163,10 +138,8 @@
         display: inline-block;
         background-color: $c-neutral6;
         position: relative;
-        @include rem((
-            top: -32px,
-            height: 4px
-        ));
+        top: rem(-32px);
+        height: rem(4px);
     }
 
     .funnel__step {
@@ -174,19 +147,15 @@
         display: inline-block;
         position: relative;
         z-index: 1;
-        @include rem((
-            height: 20px,
-            width: 20px
-        ));
+        height: rem(20px);
+        width: rem(20px);
 
         .funnel__point {
             display: inline-block;
             background-color: $white;
-            border: 2px solid $c-neutral6;
-            @include rem((
-                width: 20px,
-                height: 20px
-            ));
+            border: rem(2px) solid $c-neutral6;
+            width: rem(20px);
+            height: rem(20px);
             @include border-radius(50px);
         }
 
@@ -200,12 +169,10 @@
             text-align: center;
             position: absolute;
             @include fs-textsans(2);
-            @include rem((
-                width: 106px,
-                left: 50%,
-                margin-left: -53px,
-                top: -36px
-            ));
+            width: rem(106px);
+            left: 50%;
+            margin-left: rem(-53px);
+            top: rem(-36px);
         }
 
         &:first-child .funnel__text {
